# DzTherapy

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  Makefile  README.md  RUNBOOK.md  TASKS.md  algeria_mental_health_saas_prd.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_display_name.py
accounts/tests/: test_settings.py
bookings/: admin.py  forms.py  models.py  services.py  urls.py  views.py
bookings/migrations/: 0001_initial.py  0002_booking_cancelled_by_booking_reminder_sent_at_and_more.py  0003_review_sessionnote.py
bookings/tests/: test_flow.py  test_lifecycle.py
config/: asgi.py  settings.py  urls.py
core/: admin_views.py  factories.py  urls.py  views.py
core/tests/: test_smoke.py
intake/: admin.py  models.py  services.py  urls.py  views.py
intake/migrations/: 0001_initial.py
messaging/: admin.py  consumers.py  context_processors.py  forms.py  models.py  routing.py  services.py  urls.py  views.py
messaging/migrations/: 0001_initial.py  0002_message_voice_note_alter_message_body.py
messaging/tests/: test_messaging.py  test_realtime.py
notifications/: email.py  models.py
tailwind/: input.css
templates/: 403.html  404.html  500.html  base.html  manifest.webmanifest  sw.js
templates/account/: _form_styles.html  base.html  email_confirm.html  login.html  logout.html  (+3 more)
therapists/: admin.py  forms.py  models.py  services.py  urls.py  views.py
(+57 files in other folders)
